<resources>
    <string name="app_name">MYorkTimes</string>

    <string name="action_search">Search</string>
    <string name="action_share">Share</string>

    <string name="message_no_internet">No Internet Connectivity</string>
    <string name="message_end_of_articles">No more Articles to display</string>
    <string name="message_articles_initial">Start searching for articles above</string>

    <string name="label_filter">Filter</string>
    <string name="hint_article_from_date">From Date</string>
    <string name="title_search_filters">Search Filters</string>
    <string name="title_filters_sort">Sort By</string>

    <string name="filter_news_desk_none_selected">- None -</string>

    <string name="filter_label_from_date">From Date</string>
    <string name="filter_label_to_date">To Date</string>
    <string name="filter_label_sort_order">Sort Order</string>
    <string name="filter_label_news_desk">News Desk</string>

    <string name="share_intent_title">Share using</string>
    <string name="author_name_unknown">N/A</string>

    <string name="message_no_bookmarks">No Bookmarks</string>
    <string name="action_remove_bookmark">Remove Bookmark</string>
    <string name="action_add_bookmark">Add Bookmark</string>
    <string name="drawer_label_bookmark">Bookmarks</string>
    <string name="drawer_label_home">Home</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <string-array name="filter_sort_order">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>

    <string-array name="filter_news_desk">
        <item>Arts</item>
        <item>Education</item>
        <item>Fashion &amp; Style</item>
        <item>Health</item>
        <item>Sports</item>
    </string-array>


</resources>
