<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".BookSearchActivity">

    <item android:id="@+id/action_add_bookmark"
          android:orderInCategory="4"
          android:title="@string/action_add_bookmark"
          android:icon="@drawable/ic_bookmark_border"
          app:showAsAction="always"/>

    <item android:id="@+id/action_remove_bookmark"
          android:orderInCategory="4"
          android:title="@string/action_remove_bookmark"
          android:icon="@drawable/ic_bookmark"
          app:showAsAction="always"/>

    <item android:id="@+id/action_share"
          android:orderInCategory="5"
          android:title="@string/action_share"
          android:icon="@drawable/ic_share"
          app:showAsAction="always"/>
</menu>
