<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_search_filters"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@color/colorPrimaryLight"
            android:minHeight="?attr/actionBarSize"
            android:gravity="center"/>

        <LinearLayout
            android:id="@+id/ll_article_from_date_container"
            style="@style/FilterContainer">

            <TextView
                style="@style/FilterLabel"
                android:text="@string/filter_label_from_date" />

            <TextView
                android:id="@+id/tv_filter_start_date"
                style="@style/FilterValue"
                android:text="01 Jan 2010"/>

        </LinearLayout>

        <View style="@style/DialogDivider" />

        <LinearLayout
            android:id="@+id/ll_article_sort_container"
            style="@style/FilterContainer">

            <TextView
                style="@style/FilterLabel"
                android:text="@string/filter_label_sort_order" />

            <TextView
                android:id="@+id/tv_filter_sort"
                style="@style/FilterValue"
                android:text="Newest" />

        </LinearLayout>

        <View style="@style/DialogDivider" />

        <LinearLayout
            android:id="@+id/ll_article_news_desk_container"
            style="@style/FilterContainer">

            <TextView
                style="@style/FilterLabel"
                android:text="@string/filter_label_news_desk" />

            <TextView
                android:id="@+id/tv_filter_news_desk"
                style="@style/FilterValue"
                android:text="@string/filter_news_desk_none_selected"/>

        </LinearLayout>

    </LinearLayout>

</layout>
